v0.6.0
- TWEAK: Drastically improve Customizer performance (now it loads much faster).
- FIX: Customizer color control's autocomplete issue.
- FIX: Customizer bugs.
- FIX: Header CSS bugs.
- FIX: oEmbed CSS bugs on Gutenberg blocks.
- FIX: Page header's default background on static pages.

v0.5.5
- TWEAK: Improve compatibility for Suki Pro.
- FIX: Page header's background not using feature image on static pages.

v0.5.4
- NEW: Customizer's dimension control.
- TWEAK: Improve default compatibility styles for Gutenberg.
- TWEAK: Improve compatibility for Suki Pro.
- TWEAK: Improve value range on all padding, border controls in Customizer.
- TWEAK: Improve Suki admin page content and design.
- FIX: Responsive settings on Customizer's Typography control.
- FIX: "Hide post title" option (Page Settings) bug on static page.
- REMOVE: Section side padding options on Customizer -- now is default in theme CSS.
- REMOVE: Gutenberg options on Customizer -- now is default in theme CSS.

v0.5.2
- FIX: custom CSS bug on v0.5.1.

v0.5.1
- NEW: "Page header" option on Page Settings to enable / disable page header (replacing "Disable page header" option).
- TWEAK: Improve all sanitization and escaping.
- TWEAK: Improve some strings.
- FIX: z-index on Content section overlapping Header bottom bar.
- FIX: Mobile header submenu typography live preview on Customizer.
- FIX: Page settings fallback values for Page header background image.
- REMOVE: "Disable page header" option on Page Setting (in favor of the new "Page header" option).

v0.5.0
- NEW: Page Header background image mode on Customizer's Page Settings (replacing the old background options).
- NEW: Gutenberg columns option in Customizer.
- NEW: Option to hide featured image on page and post meta box.
- TWEAK: Add proper `rel` attribute on social links -- credit to (luizbills)[https://github.com/luizbills] (#8)[https://github.com/sukiwp/suki/pull/8]
- TWEAK: Move all Gutenberg compatibility features to a separate module.