@@ -499,7 +499,7 @@ $add['container_width'] = array(
 	),
 	array(
 		'type'     => 'css',
-		'element'  => '.suki-header-section.suki-section-default .menu .sub-menu',
+		'element'  => '.suki-header-section.suki-section-default .sub-menu',
 		'property' => 'max-width',
 	),
 );
@@ -684,7 +684,7 @@ foreach ( array( 'main_bar', 'top_bar', 'bottom_bar' ) as $type ) {
 	}
 
 	foreach ( array( 'font_family', 'font_weight', 'font_style', 'text_transform', 'font_size', 'line_height', 'letter_spacing' ) as $prop ) {
-		$element = '.suki-header-' . $bar . ' .sub-menu .menu .menu-item > a';
+		$element = '.suki-header-' . $bar . ' .menu .sub-menu .menu-item > a';
 		$property = str_replace( '_', '-', $prop );
 
 		$add['header_' . $type . '_submenu_' . $prop ] = array(
@@ -744,6 +744,13 @@ foreach ( array( 'main_bar', 'top_bar', 'bottom_bar' ) as $type ) {
 			'type'     => 'css',
 			'element'  => '.suki-header-' . $bar . ' .suki-header-menu > ul > li > a:hover:after, .suki-header-' . $bar . ' .suki-header-menu > ul > li > a:focus:after',
 			'property' => 'background-color',
+		),
+	);
+	$add['header_' . $type . '_menu_highlight_text_color'] = array(
+		array(
+			'type'     => 'css',
+			'element'  => '.suki-header-' . $bar . ' .suki-header-menu > ul > li > a:hover, .suki-header-' . $bar . ' .suki-header-menu > ul > li > a:focus',
+			'property' => 'color',
 		),
 	);
 }
@@ -902,7 +909,7 @@ foreach ( array( 'font_family', 'font_weight', 'font_style', 'text_transform', '
 	$add['header_mobile_vertical_bar_submenu_' . $prop ] = array(
 		array(
 			'type'     => 'font_family' === $prop ? 'font' : 'css',
-			'element'  => '.suki-header-mobile-vertical-bar .sub-menu .menu-item > a, .suki-header-mobile-vertical-bar .sub-menu .menu-item > .suki-toggle',
+			'element'  => '.suki-header-mobile-vertical-bar .menu .sub-menu .menu-item > a, .suki-header-mobile-vertical-bar .sub-menu .menu-item > .suki-toggle',
 			'property' => str_replace( '_', '-', $prop),
 		),
 	);
