@@ -1,9 +1,10 @@
 v0.6.0
 - TWEAK: Drastically improve Customizer performance (now it loads much faster).
+- TWEAK: Now section layout side padding is configurable and merged to "Padding" option to avoid confusion.
+- FIX: Header sub-menu typography.
 - FIX: Customizer color control's autocomplete issue.
 - FIX: Customizer bugs.
-- FIX: Header CSS bugs.
-- FIX: oEmbed CSS bugs on Gutenberg blocks.
+- FIX: Some CSS bugs.
 - FIX: Page header's default background on static pages.
 
 v0.5.5
